# a5_fast

./: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: lib.rs
