[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "a5_fast"
version = "0.1.0"
description = "Fast Python bindings for the A5 discrete global grid system"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "After Realism" },
]
keywords = ["a5", "dggs", "geospatial", "grid", "spatial-index"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Repository = "https://github.com/afterrealism/a5_fast"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "Cargo.toml:version",
]
update_changelog_on_bump = true
